[project]
name = "wireworldca"
version = "0.1.1"
description = "Wireworld Half-Adder Experiments"
authors = [
    {name = "DJ Stomp",email = "85457381+DJStompZone@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[project.scripts]
wireworldca = "wireworldca.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
